# realtime-ai-security-camera-system

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: branch-protection.json  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: branch-protection.yml  ci.yml  pre-commit.yml  publish.yml  takumi-guard.yml
laptop/: .env.example  README.md  docker-compose.yml
laptop/config/: frigate.yml  go2rtc.yml
laptop/scripts/: collect_training_samples.py  evaluate_model.py  pip.conf  requirements.txt
mobile/: README.md
mobile/balcony_guard_app/: pubspec.yaml
mobile/balcony_guard_app/lib/: app.dart  main.dart
mobile/balcony_guard_app/lib/models/: detection_event.dart
mobile/balcony_guard_app/lib/screens/: events_screen.dart  home_screen.dart  live_view_screen.dart  local_detection_screen.dart
mobile/balcony_guard_app/lib/services/: frigate_api_service.dart  mediapipe_detection_service.dart  notification_service.dart
mobile/balcony_guard_app/lib/widgets/: detection_overlay.dart  event_card.dart
raspberry-pi/: .env.example  README.md  docker-compose.yml
raspberry-pi/config/: frigate.yml  go2rtc.yml
scripts/: check-github-actions-pinning.sh  lint.sh
src/balcony_guard/: __init__.py  __main__.py  collect_training_samples.py  collect_video_samples.py  evaluate_model.py
tests/: __init__.py  test_scripts.py  test_video_samples.py
