[project]
name = "realtime-ai-security-camera-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "N802",  # function name should be lowercase（スクリプト内の命名規則）
    "N806",  # variable in function should be lowercase
]

[tool.ruff.lint.isort]
known-first-party = ["laptop"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
exclude-newer = "3 days"

[[tool.uv.index]]
url = "https://pypi.flatt.tech/simple/"
default = true
