[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "balcony-guard"
version = "0.1.0"
description = "ベランダ向けリアルタイムAI監視カメラシステム - Frigate連携の学習データ収集・モデル評価ツール"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "sotanengel" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "opencv-python>=4.13.0.92",
    "Pillow>=10.2.0",
    "onnxruntime>=1.17.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sotanengel/realtime-ai-security-camera-system"
Repository = "https://github.com/sotanengel/realtime-ai-security-camera-system"

[project.scripts]
balcony-guard-collect = "balcony_guard.collect_training_samples:main"
balcony-guard-evaluate = "balcony_guard.evaluate_model:main"
balcony-guard-video = "balcony_guard.collect_video_samples:main"

[tool.hatch.build.targets.wheel]
packages = ["src/balcony_guard"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "N802",  # function name should be lowercase（スクリプト内の命名規則）
    "N806",  # variable in function should be lowercase
]

[tool.ruff.lint.isort]
known-first-party = ["balcony_guard"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
exclude-newer = "3 days"

[[tool.uv.index]]
url = "https://pypi.flatt.tech/simple/"
default = true
